--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: How to code!?
+description: Documenting things i learnt for future references.
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://wulcat.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Projects: http://wulcat.com
+  Github: https://github.com/wulcat
+
+livereload: true
